Fix content overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@ body {
   margin-right: 0px;
   color: black;
   background-color: #ef3b24;
+  overflow: hiddne;
 }
 
 .logo {
